--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -14,7 +14,7 @@ body:
     id: contact
     attributes:
       label: Contact Details
-      description: How can we get in touch with you if we need more info?
+      description: how can we get in touch with you if we need more info?
       placeholder: ex. email@example.com
     validations:
       required: false
@@ -22,9 +22,8 @@ body:
     id: what-happened
     attributes:
       label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      description: also tell us what you expected to happen
+      placeholder: tell us what you see
     validations:
       required: true
   - type: dropdown
@@ -41,5 +40,5 @@ body:
     id: logs
     attributes:
       label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      placeholder: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: shell
